--- a/需求文档/.porter-ci.config.json
+++ b/需求文档/.porter-ci.config.json
@@ -1,5 +1,6 @@
 {
   "projectName": "porter-ci",
+  "projectPath": "/Users/dingtiancheng/Desktop/project/porter-ci-A",
   "commit-id": "47474884",
   "targetProjects": [
     {
