--- a/.porter-ci.config.json
+++ b/.porter-ci.config.json
@@ -1,4 +1,12 @@
 {
-  "projectPath": ".",
-  "targetProjects": []
+  "projectName": "porter-ci-testA",
+  "projectPath": "../porter-ci-testA",
+  "commit-id": "44a9e335ddc8777c9853b52d4cb01f8205b471bb",
+  "targetProjects": [
+    {
+      "projectName": "porter-ci-testB",
+      "projectPath": "../porter-ci-testB",
+      "branch": "feat"
+    }
+  ]
 }
