feat: 更改配置信息

--- a/.porter-ci.config.json
+++ b/.porter-ci.config.json
@@ -6,7 +6,7 @@
     {
       "projectName": "porter-ci-testB",
       "projectPath": "../porter-ci-testB",
-      "branch": "feat"
+      "branch": "feat-1"
     }
   ]
 }
