--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "porter-ci": "dist/index.js"
   },
   "scripts": {
+    "start": "npm run build && node dist/index.js",
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
