--- a/需求文档/porter.config.json
+++ b/需求文档/porter.config.json
@@ -1,5 +1,5 @@
 {
-  "projectName": "porter-ci",
+  "projectName": "porter",
   "projectPath": "/Users/dingtiancheng/Desktop/project/porter-ci-A",
   "commit-id": "47474884",
   "targetProjects": [
