--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "porter-ci",
+  "name": "porter",
   "version": "1.0.0",
-  "description": "基于git cherry-pick实现跨项目代码功能同步的CI工具",
+  "description": "基于git实现跨项目代码功能同步的CI工具",
   "type": "module",
   "bin": {
-    "porter-ci": "dist/index.js"
+    "porter": "dist/index.js"
   },
   "scripts": {
     "start": "npm run build && node dist/index.js",
