--- a/porter.config.json
+++ b/porter.config.json
@@ -1,6 +1,7 @@
 {
   "projectName": "porter-ci-testA",
   "projectPath": "../porter-ci-testA",
+  "branch": "feat-1",
   "commit-id": "44a9e335ddc8777c9853b52d4cb01f8205b471bb",
   "targetProjects": [
     {
