--- a/package.json
+++ b/package.json
@@ -10,21 +10,34 @@
     "start": "npm run build && node dist/index.js",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "prepare": "husky install"
   },
   "dependencies": {
     "commander": "^12.0.0",
     "inquirer": "^9.2.15"
   },
   "devDependencies": {
-    "@types/node": "^20.11.0",
+    "@commitlint/cli": "^20.3.1",
+    "@commitlint/config-conventional": "^20.3.1",
     "@types/inquirer": "^9.0.7",
+    "@types/node": "^20.11.0",
     "@typescript-eslint/eslint-plugin": "^6.19.0",
     "@typescript-eslint/parser": "^6.19.0",
     "@vitejs/plugin-basic-ssl": "^1.1.0",
     "eslint": "^8.56.0",
+    "husky": "^7.0.4",
+    "lint-staged": "^9.0.2",
+    "prettier": "^2.5.1",
     "typescript": "^5.3.3",
     "vite": "^5.0.11"
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": [
+      "eslint --fix",
+      "prettier --write",
+      "git add"
+    ]
   },
   "engines": {
     "node": ">=22.18.0"
