--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,8 +5,7 @@
     "module": "ESNext",
     "lib": ["ES2022"],
     "skipLibCheck": true,
-    "moduleResolution": "bundler",
-    "allowImportingTsExtensions": true,
+    "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
