--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
     "README.md",
     "LICENSE"
   ],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/tobyDing/porter-ci.git"
+  },
   "bugs": {
     "url": "https://github.com/tobyDing/porter-ci/issues"
   },
