--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/tobyDing/porter-ci.git"
+    "url": "https://github.com/tobyDing/porter-ci.git"
   },
   "bugs": {
     "url": "https://github.com/tobyDing/porter-ci/issues"
