--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "porter-ci",
-  "version": "1.0.0",
   "description": "基于git实现跨项目代码功能同步的CI工具",
   "keywords": [
     "porter-ci",
@@ -32,6 +31,7 @@
   "bin": {
     "porter-ci": "dist/index.js"
   },
+  "packageManager": "pnpm@8.15.4",
   "scripts": {
     "start": "npm run build && node dist/index.js",
     "build": "tsc && vite build",
