--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "typecheck": "tsc --noEmit",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "release": "release-it"
   },
   "dependencies": {
     "commander": "^12.0.0",
@@ -47,6 +48,7 @@
   "devDependencies": {
     "@commitlint/cli": "^17.8.1",
     "@commitlint/config-conventional": "^17.8.1",
+    "@release-it/conventional-changelog": "^10.0.4",
     "@types/inquirer": "^9.0.7",
     "@types/node": "^20.11.0",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
@@ -56,6 +58,7 @@
     "husky": "^7.0.4",
     "lint-staged": "^9.0.2",
     "prettier": "^2.5.1",
+    "release-it": "^19.2.3",
     "typescript": "^4.4.4",
     "vite": "^5.0.11"
   },
