--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "porter-ci",
-  "version": "1.0.0-beta1",
+  "version": "1.0.0",
   "description": "基于git实现跨项目代码功能同步的CI工具",
   "keywords": [
     "porter-ci",
