--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "porter-ci",
+  "name": "porter-cli",
   "version": "1.0.0",
   "description": "基于git实现跨项目代码功能同步的CI工具",
   "keywords": [
-    "porter-ci",
+    "porter-cli",
     "ci",
     "code-sync",
     "git",
@@ -30,7 +30,7 @@
   "license": "MIT",
   "type": "module",
   "bin": {
-    "porter-ci": "dist/index.js"
+    "porter-cli": "dist/index.js"
   },
   "packageManager": "pnpm@8.15.4",
   "scripts": {
