--- a/package.json
+++ b/package.json
@@ -60,8 +60,10 @@
     "lint-staged": "^9.0.2",
     "prettier": "^2.5.1",
     "release-it": "^19.2.3",
+    "tsx": "^4.21.0",
     "typescript": "^4.4.4",
-    "vite": "^5.0.11"
+    "vite": "^5.0.11",
+    "vite-plugin-static-copy": "^3.1.4"
   },
   "lint-staged": {
     "*.{ts,tsx}": [
